# agl-health

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
agl-health-common/: Cargo.toml
agl-health-common/src/: events.rs  lib.rs  metrics.rs  metrics_v3.rs
agl-health-common/tests/: v3_layout.rs  v3_offsets_dump.rs
agl-health-daemon/: Cargo.toml  build.rs
agl-health-daemon/src/: aggregator.rs  api.rs  bandwidth.rs  cgroup_names.rs  dbus_publisher.rs  events.rs  loader.rs  main.rs  metrics.rs  proc_tier.rs  shm.rs  time_base.rs
agl-health-ebpf/: Cargo.toml  rust-toolchain.toml
agl-health-ebpf/.cargo/: config.toml
agl-health-ebpf/src/: block.rs  cpu.rs  fileio.rs  main.rs  memory.rs  netproc.rs  network.rs  offsets.rs  process.rs  scheduler.rs  security.rs  stats.rs  vmlinux.rs
agl-health-native/: pubspec.yaml
agl-health-native/.dart_tool/: package_config.json  package_graph.json
agl-health-native/interfaces/: com.agl.health.xml
agl-health-native/lib/: agl_health_native.dart
agl-health-native/lib/src/: dbus_event_channel.dart  health_client.dart  metrics_channel.dart
agl-health-native/native/: CMakeLists.txt
agl-health-native/native/include/: agl_health_plugin.h
agl-health-native/native/src/: dbus_subscriber.cpp  dbus_subscriber.hpp  plugin_main.cpp  shm_reader.cpp  shm_reader.hpp
agl-health-native/test/: shm_smoke.dart
files/: com.agl.health.conf
flutter_task_manager/: pubspec.yaml
flutter_task_manager/lib/: main.dart
flutter_task_manager/lib/src/: metrics_notifier.dart  network_screen.dart  overview_screen.dart  process_screen.dart  scheduler_screen.dart  security_screen.dart  shared_widgets.dart
flutter_task_manager/linux/: CMakeLists.txt
xtask/: Cargo.toml
xtask/src/: main.rs
