[package]
name = "agl-health-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared #![no_std] event and metric types for the agl-health eBPF programs and userspace daemon."

[features]
default = []
# Enable serde derives for userspace consumers (daemon, edgex bridge, tests).
# Must NOT be enabled when compiling for the bpfel-unknown-none target.
user = ["dep:serde", "dep:serde-big-array"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde-big-array = { version = "0.5", default-features = false, optional = true }
