[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Build orchestration for the agl-health workspace (two-stage eBPF + userspace build)."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
